--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "redux-todo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://todo-list.com",
+  "homepage": "https://hani29.github.io/TODO-List/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.10",
